# bevy_ui_pointer_capture_detector

./: Cargo.toml  README.md
examples/: example.rs  minimal.rs  minimal_ui_scale.rs
src/: lib.rs
