[package]
name = "bevy_ui_pointer_capture_detector"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ui", "games"]
categories = ["game-development", "gui"]
description = "a Bevy plugin that detects when the mouse pointer is over a UI node"
readme = "README.md"
repository = "https://github.com/ickshonpe/bevy_ui_pointer_capture_detector"

[dependencies.bevy]
version = "0.8.0"


